TANKY AND BLANKY entities.html

--- a/entities.html
+++ b/entities.html
@@ -96,8 +96,8 @@
       <div class="entity-group">
         <h3>GROUP-006 "Crinitus Cimex"</h3>
         <ul class="entity-list">
-          <li><a href="404.html">006-A | Blanky</a></li>
-          <li><a href="404.html">006-B | Tanky</a></li>
+          <li><a href="entities/blanky.html">006-A | Blanky</a></li>
+          <li><a href="entities/tanky.html">006-B | Tanky</a></li>
         </ul>
       </div>
 
