BRUTALSIT levels.html

--- a/levels.html
+++ b/levels.html
@@ -65,7 +65,7 @@
       <div class="level-category">
         <h3>Undocumented / Unconfirmed Levels</h3>
         <ul class="level-list">
-          <li><a href="404.html">Level-⟁ | "Brutalist"</a></li>
+          <li><a href="levels/brutalist.html">Level-⟁ | "Brutalist"</a></li>
             <ul class="sublevel-list">
               <li><a href="404.html">Level-⟁.? | Pillar Level</a></li>
             </ul>
