--- a/phenomena.html
+++ b/phenomena.html
@@ -33,7 +33,7 @@
       <div class="entity-group">
         <h3>Phenomena</h3>
         <ul class="entity-list">
-          <li><a href="404.html">Noclips</a></li>
+          <li><a href="Phenomena/noclips.html">Noclips</a></li>
           <li><a href="Phenomena/radioentity.html">Radio Disturbance</a></li>
           <li><a href="404.html">Mannequins</a></li>
           <li><a href="404.html">Brick Moon</a></li>
@@ -51,4 +51,5 @@
 
 </body>
 </html>
+
 
