--- a/levels/hallways2.html
+++ b/levels/hallways2.html
@@ -69,15 +69,13 @@
         <section>
           <h3>Additional Notes</h3>
           <p>
-            More information is required to fully document Level.  
-            Exploration is considered <em>moderately safe</em>, though explorers are advised to remain vigilant due to hostile entity activity.
+            More information is required.  
+            The hallways seems to be some kind of clinic, guess we know where conjoineds come from.
           </p>
         </section>
 
         <blockquote style="border-left: 4px solid #ffffff; padding-left: 10px; margin: 20px 0;">
-          <em>[FERG Field Log] — “Posters suggest an possible organized past, but the hospital is completely abandoned.  
-          The mannequins lurking the halls, and we have no clue of the anomaly.  
-          Recommend caution.”</em>
+          <em>[FERG Field Log] — “I have no clue what to write here lmfao.”</em>
         </blockquote>
 
       </div>
