--- a/levels.html
+++ b/levels.html
@@ -41,11 +41,10 @@
               <li><a href="404.html">Level-0.3A | "Decrement Abnormality (Upper)"</a></li> 
               <li><a href="404.html">Level-0.3B | "Decrement Abnormality (Lower)"</a></li> 
               <li><a href="404.html">Level-0.4 | "Sandusky"</a></li>
-              <li><a href="levels/hallways.html">Level-H | "Hallways"</a></li>
             </ul>
           </li>
           <li>
-            <a href="levels/level1.html">Level-1 | "The Parking Garage"</a>
+            <a href="404.html">Level-1 | "The Parking Garage"</a>
             <ul class="sublevel-list">
               <li><a href="404.html">Level-1.1 | [DATA MISSING]</a></li>
               <li><a href="404.html">Level-1.2 | [DATA MISSING]</a></li>
@@ -58,15 +57,17 @@
           <li><a href="404.html">Level-11 | [DATA MISSING]</a></li>
           <li><a href="404.html">Level-22 | [DATA MISSING]</a></li>
           <li><a href="404.html">Level-363 | "INFORMATION OMITTED"</a></li>
-          <li><a href="levels/level601.html">Level-601 | "The End"</a></li>
+          <li><a href="404.html">Level-601 | "The End"</a></li>
         </ul>
       </div>
 
       <div class="level-category">
-        <h3>Undocumented / Unconfirmed Levels</h3>
+        <h3>Undetified Levels</h3>
         <ul class="level-list">
-          <li><a href="levels/brutalist.html">Level-⟁ | "Brutalist"</a></li>
+          <li><a href="levels/hallways2.html">Level-H | "Hallways"</a></li>
+          <li><a href="404.html">Level-⟁ | "Brutalist"</a></li>
             <ul class="sublevel-list">
+              <li><a href="404.html">Level-⟁.?? | Hell Maze</a></li>
               <li><a href="404.html">Level-⟁.? | Pillar Level</a></li>
             </ul>
           <li><a href="levels/abyss.html">Level-❖ | "Brick/Abyss"</a></li>
