--- a/levels/abyss.html
+++ b/levels/abyss.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Level ❖ - Abyss</title>
-  <link rel="stylesheet" href="../styles/main.css" />
+  <link rel="stylesheet" href="../styles/brick.css" />
 </head>
+<script src="../scripts/imageoverlay.js"></script>
 <body>
 
-  <div class="top-gif">
-    <img src="../assets/gifs/HUB_logo.gif" alt="Limbo HUB Logo">
+  <div class="banner">
+    <div class="banner-overlay">
+      <h1>Level Abyss</h1>
+      <p>"Does this place even end?"</p>
+    </div>
   </div>
 
   <div class="container">
@@ -33,20 +37,17 @@
         <section>
           <h3>Description</h3>
           <p>
-            Level ❖, commonly known as <em>"The Abyss"</em> or <em>"Brick level"</em> within the survivor community, is a vast, shifting labyrinth made entirely of brick. Illumination is minimal, provided only by scattered, eerie street lamps that emit dim, flickering light, heightening the claustrophobic and foreboding atmosphere.
+            Level ❖, commonly known as <em>"The Abyss"</em> or <em>"Brick level"</em> within the survivor community, is a vast, shifting labyrinth made entirely of brick. Lampposts can be found every where.
           </p>
           <p>
-            The level's layout changes periodically, which makes navigation and mapping difficult. The oppressive silence is broken only by strange ambient noises that seem to follow the explorer, causing immense mental strain.
+            The level's layout changes periodically, which makes navigation and mapping difficult.
           </p>
         </section>
 
         <section>
-          <h3>The moon</h3>
+          <h3>The False Moon</h3>
           <p>
-            Unique part pf level, Its form may change sometimes. Were trying Document all changes.
-          </p>
-          <p>
-            You can hear music in the area.
+          [INFORMATION MISSING]
           </p>
         </section>
 
@@ -66,7 +67,6 @@
           <ul>
             <li><strong>Hostile entities:</strong> Enigmatics can be found here.</li>
             <li><strong>Danger level architecture:</strong> High risk of death from falling.</li>
-            <li><strong>Hostile survivors/groups:</strong> Bandit groups and other hostile persons can be meet here.</li>
           </ul>
         </section>
 
@@ -76,20 +76,14 @@
             Lots of noclip walls exist throughout the maze. Some may return you to earlier levels some to another part of maze.
           </p>
           <p>
-            Passing through bright white portal lead to <a href="../404.html">Olympic.</a>
+            Passing through bright white portal lead to <a href="olympus.html">Olympus.</a>
           </p>
         </section>
 
         <section>
           <h3>Additional Notes</h3>
           <p>
-            Its difficult to orientate due to level structure, using of maps reccomended.
-          </p>
-          <p>
-            Though the environment is extremely hazardous, rare resources can attract other hostile survivors or scavengers.
-          </p>
-          <p>
-            Take some food before goin to the level since it have no normal food spawning.
+            Its difficult to navigate due to level size, using of maps reccomended.
           </p>
           
         </section>
@@ -116,7 +110,9 @@
       </div>
 
       <div class="image-column">
-        <img src="../assets/images/level_brick1.png" alt="Abyss Image 1" class="level-image"/>
+        <img src="../assets/images/level_brick1.png" alt="Image of Lamppost into the abyss" class="level-image"/>
+        <img src="../assets/images/level_brick2.png" alt="Entrance to lower part of brick" class="level-image"/>
+        <img src="../assets/images/level_brick3.png" alt="Image near void" class="level-image"/>
       </div>
     </main>
 
