--- a/levels/olympus.html
+++ b/levels/olympus.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Level ???.1 - Olympus</title>
-  <link rel="stylesheet" href="../styles/main.css" />
+  <link rel="stylesheet" href="../styles/olympus.css" />
 </head>
 <body>
+<script src="../scripts/imageoverlay.js"></script>
 
-  <div class="top-gif">
-    <img src="../assets/gifs/HUB_logo.gif" alt="Limbo HUB Logo">
+  <div class="banner">
+    <div class="banner-overlay">
+      <h1>Level Olympic</h1>
+      <p>"Behold their greatness."</p>
+    </div>
   </div>
 
   <div class="container">
@@ -80,9 +84,9 @@
       </div>
 
       <div class="image-column">
-        <img src="../assets/images/olympus.png" alt="Olympus Image" class="level-image"/>
-        <img src="../assets/images/olympus2.png" alt="Olympus Image" class="level-image"/>
-        <img src="../assets/images/olympus3.png" alt="Olympus Image" class="level-image"/>
+        <img src="../assets/images/olympus.png" alt="Olympus image 1" class="level-image"/>
+        <img src="../assets/images/olympus2.png" alt="Olympus Image 2" class="level-image"/>
+        <img src="../assets/images/olympus3.png" alt="Olympus Image 3" class="level-image"/>
       </div>
     </main>
 
