--- a/levels.html
+++ b/levels.html
@@ -56,7 +56,7 @@
           <li><a href="404.html">Level-5 | [FILE RECOVERED]"</a></li>
           <li><a href="404.html">Level-11 | [DATA MISSING]</a></li>
           <li><a href="404.html">Level-22 | [DATA MISSING]</a></li>
-          <li><a href="404.html">Level-363 | "INFORMATION OMITTED"</a></li>
+          <li><a href="404.html">Level-363 | "INFORMATION OMITTED" | "YOU CHEATED"</a></li>
           <li><a href="404.html">Level-601 | "The End"</a></li>
         </ul>
       </div>
@@ -72,6 +72,7 @@
             </ul>
           <li><a href="levels/abyss.html">Level-❖ | "Brick/Abyss"</a></li>
           <li><a href="levels/olympus.html">Level-???.1 | "Olympus"</a></li>
+          <li><a href="404.html">Level-⌘ | "INFORMATION OMMITED" | "Sub Besement"</a></li>
         </ul>
       </div>
     </main>
