--- a/levels.html
+++ b/levels.html
@@ -72,7 +72,7 @@
             </ul>
           <li><a href="levels/abyss.html">Level-❖ | "Brick/Abyss"</a></li>
           <li><a href="levels/olympus.html">Level-???.1 | "Olympus"</a></li>
-          <li><a href="404.html">Level-⌘ | "INFORMATION OMMITED" | "Sub Besement"</a></li>
+          <li><a href="levels/sub_besement.html">Level-⌘ | "INFORMATION OMMITED" | "Sub Besement"</a></li>
         </ul>
       </div>
     </main>
