--- a/levels/sub_besement.html
+++ b/levels/sub_besement.html
@@ -93,6 +93,7 @@
         <img src="../assets/images/sub_besement1.png" alt="Architecture" class="level-image"/>
         <img src="../assets/images/sub_besement2.png" alt="Dark hallway" class="level-image"/>
         <img src="../assets/images/sub_besement3.png" alt="Paintings room" class="level-image"/>
+        <img src="../assets/images/sub_besement4.png" alt="Piano room" class="level-image"/>
       </div>
     </main>
 
