synthwave level and level 0 update

--- a/levels/level0.html
+++ b/levels/level0.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Level 0 - The Infinite Hallways</title>
-  <link rel="stylesheet" href="../styles/main.css" />
+  <title>Level ⌘ - Abyss</title>
+  <link rel="stylesheet" href="../styles/level0.css" />
 </head>
+<script src="../scripts/imageoverlay.js"></script>
 <body>
 
-  <div class="top-gif">
-    <img src="../assets/gifs/HUB_logo.gif" alt="Limbo HUB Logo">
+  <div class="banner">
+    <div class="banner-overlay">
+      <h1>The Infinite Hallways</h1>
+      <p>"Here starts the long adventure."</p>
+    </div>
   </div>
 
   <div class="container">
@@ -25,70 +29,61 @@
       </nav>
     </header>
 
-        <main class="level-page">
-  <div class="text-column">
-    <h2>Level 0 - "The Infinite Hallways"</h2>
-    <p class="survival-class"><strong>Survival Difficulty:</strong> Class 3 — Moderately Safe | High amount of common Resources | Bacterium life-forms Presence</p>
+    <main class="level-page">
+      <div class="text-column">
+        <h2>Level 0 - "The Infinite Hallways"</h2>
+        <p class="survival-class"><strong>Survival Difficulty:</strong> Class 3 — Moderately Safe | High amount of common Resources | Bacterium life-forms Presence</p>
 
-    <section>
-      <h3>Description</h3>
-      <p>
-        Level 0, also known as <em>"The Infinite Hallways"</em>, is the starting point and central hub of the Backrooms. It consists of endless yellow-tinted corridors featuring stained yellow wallpaper, damp carpet, and the persistent buzz of fluorescent lighting. 
-        This is where new survivors start first.
-      </p>
-      <p>
-        The level structure is different and kind random, can be used for navigation.
-      </p>
-    </section>
+        <section>
+          <h3>Description</h3>
+          <p>
+            Level 0, also known as "The Infinite Hallways", is the starting level of the Backrooms. It consists yellow-tinted hallways featuring stained yellow wallpaper, damp carpet, and the fluorescent lighting. This is where new survivors start first.
+          </p>
+        </section>
 
-    <section>
-      <h3>Resources</h3>
-      <ul>
-        <li><strong>Food:</strong> Food bars, water cans, and various other consumables can be found.</li>
-        <li><strong>Weapons:</strong> Monkey wrenches, knives, and spears may be located in scattered areas.</li>
-        <li><strong>Light Sources:</strong> Placeables and flashlights are commonly found, useful for navigation in darkness.</li>
-      </ul>
-      <p>Resources are rarely clustered and typically appear at random locations.</p>
-    </section>
+        <section>
+          <h3>Resources</h3>
+          <ul>
+            <li><strong>Food:</strong> Food bars the main food source on the level.</li>
+            <li><strong>Weapons:</strong> Spears and machete may be located in scattered areas.</li>
+            <li><strong>Light Sources:</strong> Flashlights and batteries can be found.</li>
+          </ul>
+        </section>
 
-    <section>
-      <h3>Threats</h3>
-      <ul>
-        <li><strong>Entities:</strong> Bacterium creatures roam the hallways in a groups.</li>
-        <li><strong>Hostile Survivors:</strong> May attack others to get their stuff or for fun.</li>
-        <li><strong>ASYNC Operatives:</strong> While usually passive, ASYNC staff may become hostile if provoked.</li>
-        <li><strong>Environment:</strong> Long-term exposure to the air may be harmful due to toxic airborne elements.</li>
-      </ul>
-    </section>
+        <section>
+          <h3>Threats</h3>
+          <ul>
+            <li><strong>Entities:</strong> Bacterium life-forms roam the hallways.</li>
+            <li><strong>ASYNC Operatives:</strong> While usually passive, ASYNC staff may become hostile if provoked.</li>
+          </ul>
+        </section>
 
-    <section>
-      <h3>Exits</h3>
-      <p>Big amount of exits on the level. Known exits include:</p>
-      <ul>
-        <li><strong>KV-31:</strong> Seems to be leading to frontrooms.</li>
-        <li><strong>Level 0.1, 0.2, 0.3 and other:</strong> Accessible through elevators, doors, noclips.</li>
-      </ul>
-    </section>
+        <section>
+          <h3>Exits</h3>
+          <p>
+            <li>Goin through an no-clip lead to other level.</li>
+            <li>Most level 0 sub-levels can be accesed without no-clips.</li>
+          </p>
+        </section>
 
-    <section>
-      <h3>Additional Notes</h3>
-      <p>
-        ASYNC documentation suggests Level 0 contains between 9-10 vertical floors. Exploration of vertical shafts or hidden access panels may lead to undocumented sublevels. 
-      </p>
-    </section>
-  </div>
+        <section>
+          <h3>Additional Notes</h3>
+          <p>
+          ASYNC documentation suggests Level 0 contains between 9-10 vertical floors. Exploration of vertical shafts or hidden access panels may lead to undocumented regions.
+          </p>
+        </section>
+      </div>
 
-  <div class="image-column">
-    <img src="../assets/images/level0_1.png" alt="Level 0 Image" class="level-image"/>
-    <img src="../assets/images/level0_2.png" alt="Level 0 Image" class="level-image"/>
-    <img src="../assets/images/level0_3.png" alt="Level 0 Image" class="level-image"/>
-  </div>
-</main>
-
+      <div class="image-column">
+        <img src="../assets/images/level0_1.png" alt="A hallway" class="level-image"/>
+        <img src="../assets/images/level0_2.png" alt="Another hallway" class="level-image"/>
+        <img src="../assets/images/level0_3.png" alt="And... Another hallway" class="level-image"/>
+      </div>
+    </main>
 
     <footer>
       <p>© 1998 (2024) Limbo FERG HUB.</p>
-      <p>This is an unofficial fan wiki for Backrooms: Limbo. We are not affiliated with the developers of the game. All rights belong to their respective owners.<p></p>
+      <p>This is an unofficial fan wiki for Backrooms: Limbo. We are not affiliated with the developers of the game. All rights belong to their respective owners.</p>
     </footer>
   </div>
 
