--- a/levels.html
+++ b/levels.html
@@ -35,29 +35,29 @@
           <li>
             <a href="levels/level0.html">Level-0 | "Infinite Hallways"</a>
             <ul class="sublevel-list">
-              <li><a href="404.html">Level-0.1 | "Motel Depot"</a></li>
-              <li><a href="404.html">Level-0.2A | "Bluerooms"</a></li>
-              <li><a href="404.html">Level-0.2B | "Gallery"</a></li>
-              <li><a href="404.html">Level-0.3A | "Decrement Abnormality (Upper)"</a></li> 
-              <li><a href="404.html">Level-0.3B | "Decrement Abnormality (Lower)"</a></li> 
-              <li><a href="404.html">Level-0.4 | "Sandusky"</a></li>
+              <li><a href="404.html">Level-0.1 | "Motel Depot" [WIP]</a></li>
+              <li><a href="404.html">Level-0.2A | "Bluerooms" [WIP]</a></li>
+              <li><a href="404.html">Level-0.2B | "Gallery" [WIP]</a></li>
+              <li><a href="404.html">Level-0.3A | "Decrement Abnormality (Upper)" [WIP]</a></li> 
+              <li><a href="404.html">Level-0.3B | "Decrement Abnormality (Lower)" [WIP]</a></li> 
+              <li><a href="404.html">Level-0.4 | "Sandusky" [WIP]</a></li>
             </ul>
           </li>
           <li>
-            <a href="404.html">Level-1 | "The Parking Garage"</a>
+            <a href="404.html">Level-1 | "The Parking Garage" [WIP]</a>
             <ul class="sublevel-list">
               <li><a href="404.html">Level-1.1 | [DATA MISSING]</a></li>
               <li><a href="404.html">Level-1.2 | [DATA MISSING]</a></li>
             </ul>
           </li>
           <li><a href="404.html">Level-2 | [DATA MISSING]</a></li>
-          <li><a href="404.html">Level-3 | "Facility"</a></li>
-          <li><a href="404.html">Level-4 | "Empty Offices"</a></li>
-          <li><a href="404.html">Level-5 | [FILE RECOVERED]"</a></li>
+          <li><a href="404.html">Level-3 | "Facility" [WIP]</a></li>
+          <li><a href="404.html">Level-4 | "Empty Offices" [WIP]</a></li>
+          <li><a href="404.html">Level-5 | [DATA MISSING]"</a></li>
           <li><a href="404.html">Level-11 | [DATA MISSING]</a></li>
           <li><a href="404.html">Level-22 | [DATA MISSING]</a></li>
-          <li><a href="404.html">Level-363 | "INFORMATION OMITTED" | "YOU CHEATED"</a></li>
-          <li><a href="404.html">Level-601 | "The End"</a></li>
+          <li><a href="404.html">Level-363 | "INFORMATION OMITTED" | "YOU CHEATED" [WIP]</a></li>
+          <li><a href="404.html">Level-601 | "The End" [WIP]</a></li>
         </ul>
       </div>
 
@@ -65,10 +65,10 @@
         <h3>Undetified Levels</h3>
         <ul class="level-list">
           <li><a href="levels/hallways2.html">Level-H | "Hallways"</a></li>
-          <li><a href="404.html">Level-⟁ | "Brutalist"</a></li>
+          <li><a href="levels/brutalist.html">Level-⟁ | "Brutalist"</a></li>
             <ul class="sublevel-list">
-              <li><a href="404.html">Level-⟁.?? | Hell Maze</a></li>
-              <li><a href="404.html">Level-⟁.? | Pillar Level</a></li>
+              <li><a href="404.html">Level-⟁.?? | Hell Maze [WIP]</a></li>
+              <li><a href="404.html">Level-⟁.? | Pillar Level [WIP]</a></li>
             </ul>
           <li><a href="levels/abyss.html">Level-❖ | "Brick/Abyss"</a></li>
           <li><a href="levels/olympus.html">Level-???.1 | "Olympus"</a></li>
@@ -80,12 +80,12 @@
       <div class="level-category">
         <h3>Areas and Locations</h3>
         <ul class="level-list">
-          <li><a href="404.html">Level-0.A | "Nomad Shelter"</a></li>
-          <li><a href="404.html">Level-0.B | "Attic"</a></li> 
-          <li><a href="404.html">Level-0.C | "Grandma's House"</a></li> 
-          <li><a href="404.html">Level-0.D | "Paranoia"</a></li>
-          <li><a href="404.html">Level-0.E | "Spire"</a></li>
-          <li><a href="404.html">Level-0.F | "Shopping Mall"</a></li>
+          <li><a href="404.html">Level-0.A | "Nomad Shelter" [WIP]</a></li>
+          <li><a href="404.html">Level-0.B | "Attic" [WIP]</a></li> 
+          <li><a href="404.html">Level-0.C | "Grandma's House" [WIP]</a></li> 
+          <li><a href="404.html">Level-0.D | "Paranoia" [WIP]</a></li>
+          <li><a href="404.html">Level-0.E | "Spire" [WIP]</a></li>
+          <li><a href="404.html">Level-0.F | "Shopping Mall" [WIP]</a></li>
           
         </ul>
       </div>
