--- a/objects.html
+++ b/objects.html
@@ -34,25 +34,25 @@
         <h3>Anomalous Items"</h3>
         <ul class="entity-list">
           <li><a href="objects/palekey.html">Pale Key</a></li>
-          <li><a href="404.html">Muramasa</a></li>
-          <li><a href="404.html">Unusual Lantern</a></li>
-          <li><a href="404.html">Strange Gasmask</a></li>
-          <li><a href="404.html">Electrical Spear</a></li>
-          <li><a href="404.html">Nomad Spear</a></li>
-          <li><a href="404.html">Nomad Lantern</a></li>
+          <li><a href="404.html">Muramasa [WIP]</a></li>
+          <li><a href="404.html">Unusual Lantern [WIP]</a></li>
+          <li><a href="404.html">Strange Gasmask [WIP]</a></li>
+          <li><a href="404.html">Electrical Spear [WIP]</a></li>
+          <li><a href="404.html">Nomad Spear [WIP]</a></li>
+          <li><a href="404.html">Nomad Lantern [WIP]</a></li>
         </ul>
       </div>
 
       <div class="entity-group">
         <h3>Miscellaneous</h3>
         <ul class="entity-list">
-          <li><a href="404.html">Wall Graffiti</a></li>
+          <li><a href="404.html">Wall Graffiti [WIP]</a></li>
           <li><a href="404.html">Language</a></li>
-          <li><a href="404.html">Calendar</a></li>
-          <li><a href="404.html">Parietal Art</a></li>
-          <li><a href="404.html">Gramaphone</a></li>
-          <li><a href="404.html">Typewriters</a></li>
-          <li><a href="404.html">Elevator</a></li>
+          <li><a href="404.html">Calendar [WIP]</a></li>
+          <li><a href="404.html">Parietal Art [WIP]</a></li>
+          <li><a href="404.html">Gramaphone [WIP]</a></li>
+          <li><a href="404.html">Typewriters [WIP]</a></li>
+          <li><a href="404.html">Elevator [WIP]</a></li>
         </ul>
       </div>
 
