--- a/phenomena.html
+++ b/phenomena.html
@@ -35,10 +35,10 @@
         <ul class="entity-list">
           <li><a href="Phenomena/noclips.html">Noclips</a></li>
           <li><a href="Phenomena/radioentity.html">Radio Disturbance</a></li>
-          <li><a href="404.html">Mannequins</a></li>
-          <li><a href="404.html">Brick Moon</a></li>
-          <li><a href="404.html">Abnormalities</a></li>
-          <li><a href="404.html">Emplacement Anomalies</a></li>
+          <li><a href="404.html">Mannequins [WIP]</a></li>
+          <li><a href="404.html">Brick Moon [WIP]</a></li>
+          <li><a href="404.html">Abnormalities [WIP]</a></li>
+          <li><a href="404.html">Emplacement Anomalies [WIP]</a></li>
         </ul>
       </div>
 
@@ -51,5 +51,6 @@
 
 </body>
 </html>
+
 
 
