--- a/entities.html
+++ b/entities.html
@@ -37,29 +37,29 @@
           <li><a href="entities/scalpel.html">001-AA | Scalpel</a></li>
           <li><a href="entities/shiv.html">001-AB | Shiv</a></li>
           <li><a href="entities/spotlight.html">001-B | Witnesses</a></li>
-          <li><a href="404.html">001-BA | Junior Floodlight</a></li>
-          <li><a href="404.html">001-C | Pipehead</a></li>
-          <li><a href="404.html">001-D | Gramophone</a></li>
-          <li><a href="404.html">001-E | Crawler</a></li>
-          <li><a href="404.html">001-EA | Strider</a></li>
-          <li><a href="404.html">001-F | Pseudo Apex</a></li>
-          <li><a href="404.html">001-G | Amalgam</a></li>
-          <li><a href="404.html">001-H | Scorpion</a></li>
-          <li><a href="404.html">001-Q | Turret</a></li>
-          <li><a href="404.html">001-QA | Antilion</a></li>
-          <li><a href="404.html">001-R | Harvester</a></li>
-          <li><a href="404.html">001-S | Skewer</a></li>
-          <li><a href="404.html">001-T | Spear Thrower</a></li>
-          <li><a href="404.html">001-U | Guider</a></li>
+          <li><a href="404.html">001-BA | Junior Floodlight [WIP]</a></li>
+          <li><a href="404.html">001-C | Pipehead [WIP]</a></li>
+          <li><a href="404.html">001-D | Gramophone [WIP]</a></li>
+          <li><a href="404.html">001-E | Crawler [WIP]</a></li>
+          <li><a href="404.html">001-EA | Strider [WIP]</a></li>
+          <li><a href="404.html">001-F | Pseudo Apex [WIP]</a></li>
+          <li><a href="404.html">001-G | Amalgam [WIP]</a></li>
+          <li><a href="404.html">001-H | Scorpion [WIP]</a></li>
+          <li><a href="404.html">001-Q | Turret [WIP]</a></li>
+          <li><a href="404.html">001-QA | Antilion [WIP]</a></li>
+          <li><a href="404.html">001-R | Harvester [WIP]</a></li>
+          <li><a href="404.html">001-S | Skewer [WIP]</a></li>
+          <li><a href="404.html">001-T | Spear Thrower [WIP]</a></li>
+          <li><a href="404.html">001-U | Guider [WIP]</a></li>
         </ul>
       </div>
 
       <div class="entity-group">
         <h3>GROUP-002 "Constructs"</h3>
         <ul class="entity-list">
-          <li><a href="404.html">002-A | Sprinter</a></li>
-          <li><a href="404.html">002-B | Zerg</a></li>
-          <li><a href="404.html">002-C | Reaper</a></li>
+          <li><a href="404.html">002-A | Sprinter [WIP]</a></li>
+          <li><a href="404.html">002-B | Zerg [WIP]</a></li>
+          <li><a href="404.html">002-C | Reaper [WIP]</a></li>
           <li><a href="404.html">002-D | [FILE CORRUPTED]</a></li>
         </ul>
       </div>
@@ -67,8 +67,8 @@
       <div class="entity-group">
         <h3>GROUP-003 "Smilers"</h3>
         <ul class="entity-list">
-          <li><a href="404.html">003-A | Charles</a></li>
-          <li><a href="404.html">003-B | Spiders</a></li>
+          <li><a href="404.html">003-A | Charles [WIP]</a></li>
+          <li><a href="404.html">003-B | Spiders [WIP]</a></li>
           <li><a href="404.html">003-X | [FILE CORRUPTED]</a></li>
         </ul>
       </div>
@@ -76,20 +76,20 @@
       <div class="entity-group">
         <h3>GROUP-004 "Gorgathians"</h3>
         <ul class="entity-list">
-          <li><a href="404.html">004-A | Nomad Scavenger</a></li>
-          <li><a href="404.html">004-B | Nomad Trader</a></li>
-          <li><a href="404.html">004-C | Nomad Warrior</a></li>
+          <li><a href="404.html">004-A | Nomad Scavenger [WIP]</a></li>
+          <li><a href="404.html">004-B | Nomad Trader [WIP]</a></li>
+          <li><a href="404.html">004-C | Nomad Warrior [WIP]</a></li>
         </ul>
       </div>
 
       <div class="entity-group">
         <h3>GROUP-005 "Enigmatics"</h3>
         <ul class="entity-list">
-          <li><a href="404.html">005-A | Whistleblower</a></li>
+          <li><a href="404.html">005-A | Whistleblower [WIP]</a></li>
           <li><a href="404.html">005-B | Doomsday Lamp</a></li>
-          <li><a href="404.html">005-C | Lurker</a></li>
+          <li><a href="404.html">005-C | Lurker [WIP]</a></li>
           <li><a href="entities/whiteangel.html">005-D | White angel</a></li>
-          <li><a href="404.html">005-E | Watchmen</a></li>
+          <li><a href="404.html">005-E | Watchmen [WIP]</a></li>
         </ul>
       </div>
 
