Updated radio entity and noclips

--- a/Phenomena/radioentity.html
+++ b/Phenomena/radioentity.html
@@ -62,7 +62,8 @@
             <li>Delivers lore-relevant ARG puzzles.</li>
             <li>Places Pale Keys in areas like the Motel Depot.</li>
             <li>Mentions real names and secrets of major lore figures.</li>
-            <li>Opens gates and interacts with heavy machinery.</li>
+            <li>Opens doors and interact with other objects.</li>
+            <a href="../wearestillhere.html"><⌀></a>
           </ul>
 
           <h3>Theories</h3>
@@ -73,16 +74,8 @@
             <em>“You hearing us hurts more than you can fantasize.”</em>
           </blockquote>
 
-          <h3>Possible Countermeasures</h3>
-          <ul>
-            <li>Limit radio usage in unstable zones.</li>
-            <li>Avoid responding directly to unknown transmissions.</li>
-            <li>Recognize and ignore voice mimicry attempts.</li>
-            <li>Mark zones with known interference to warn others.</li>
-          </ul>
-
           <h3>Visual Evidence</h3>
-          <p>The following image was reconstructed from binary code received during a broadcast on November 10th, 1998 (2024)</p>
+          <p>The following image was reconstructed from binary code received during a broadcast on November 10th, 2024.</p>
           <div class="image-column">
     <img src="../assets/images/radio_entity.png" alt="Level 0 Image" class="level-image"/>
   </div>
@@ -95,4 +88,3 @@
   </div>
 </body>
 </html>
-
