--- a/objects.html
+++ b/objects.html
@@ -47,7 +47,7 @@
         <h3>Miscellaneous</h3>
         <ul class="entity-list">
           <li><a href="404.html">Wall Graffiti [WIP]</a></li>
-          <li><a href="404.html">Language</a></li>
+          <li><a href="objects/language.html">Language</a></li>
           <li><a href="404.html">Calendar [WIP]</a></li>
           <li><a href="404.html">Parietal Art [WIP]</a></li>
           <li><a href="404.html">Gramaphone [WIP]</a></li>
