--- a/levels.html
+++ b/levels.html
@@ -54,8 +54,10 @@
           <li><a href="404.html">Level-3 | "Facility" [WIP]</a></li>
           <li><a href="404.html">Level-4 | "Empty Offices" [WIP]</a></li>
           <li><a href="404.html">Level-5 | [DATA MISSING]"</a></li>
+           <li><a href="404.html">Level-6 | "Dark Factory" [WIP]</a></li>
           <li><a href="404.html">Level-11 | [DATA MISSING]</a></li>
           <li><a href="404.html">Level-22 | [DATA MISSING]</a></li>
+          <li><a href="404.html">Level-110 | [DATA MISSING]</a></li>
           <li><a href="404.html">Level-363 | "INFORMATION OMITTED" | "YOU CHEATED" [WIP]</a></li>
           <li><a href="404.html">Level-601 | "The End" [WIP]</a></li>
         </ul>
@@ -72,7 +74,6 @@
             </ul>
           <li><a href="levels/abyss.html">Level-❖ | "Brick/Abyss"</a></li>
           <li><a href="levels/olympus.html">Level-???.1 | "Olympus"</a></li>
-          <li><a href="levels/sub_besement.html">Level-⌘ | "INFORMATION OMMITED" | "Sub Besement"</a></li>
         </ul>
       </div>
     </main>
