updated main pages

--- a/entities.html
+++ b/entities.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Entities - Limbo HUB</title>
   <link rel="stylesheet" href="styles/main.css" />
-  <script src="scripts/modal.js" defer></script>
 </head>
 <body>
 
@@ -35,10 +34,10 @@
         <ul class="entity-list">
           <li><a href="entities/dissector.html">001-A | Dissector</a></li>
           <li><a href="entities/scalpel.html">001-AA | Scalpel</a></li>
-          <li><a href="entities/shiv.html">001-AB | Shiv</a></li>
+          <li><a href="404.html">001-AB | Shiv [WIP]</a></li>
           <li><a href="entities/spotlight.html">001-B | Witnesses</a></li>
           <li><a href="404.html">001-BA | Junior Floodlight [WIP]</a></li>
-          <li><a href="404.html">001-C | Pipehead [WIP]</a></li>
+          <li><a href="entities/scraphead.html">001-C | Pipehead</a></li>
           <li><a href="404.html">001-D | Gramophone [WIP]</a></li>
           <li><a href="404.html">001-E | Crawler [WIP]</a></li>
           <li><a href="404.html">001-EA | Strider [WIP]</a></li>
@@ -86,7 +85,7 @@
         <h3>GROUP-005 "Enigmatics"</h3>
         <ul class="entity-list">
           <li><a href="404.html">005-A | Whistleblower [WIP]</a></li>
-          <li><a href="404.html">005-B | Doomsday Lamp</a></li>
+          <li><a href="404.html">005-B | Doomsday Lamp [WIP]</a></li>
           <li><a href="404.html">005-C | Lurker [WIP]</a></li>
           <li><a href="entities/whiteangel.html">005-D | White angel</a></li>
           <li><a href="404.html">005-E | Watchmen [WIP]</a></li>
@@ -96,15 +95,17 @@
       <div class="entity-group">
         <h3>GROUP-006 "Crinitus Cimex"</h3>
         <ul class="entity-list">
-          <li><a href="entities/blanky.html">006-A | Blanky</a></li>
-          <li><a href="entities/tanky.html">006-B | Tanky</a></li>
+          <li><a href="404.html">006-A | Blunky [WIP]</a></li>
+          <li><a href="404.html">006-B | Tanky [WIP]</a></li>
         </ul>
       </div>
 
       <div class="entity-group">
         <h3>GROUP-XXX "Uncategorized"</h3>
         <ul class="entity-list">
-          <li><a href="entities/butcher.html">XXX-A | Butcher</a></li>
+          <li><a href="404.html">XXX-A | Butcher [WIP]</a></li>
+          <li><a href="404.html">XXX-B | Orblings [WIP]</a></li>
+          <li><a href="404.html">XXX-C | Butcher [WIP]</a></li>
         </ul>
       </div>
 
