--- a/factions.html
+++ b/factions.html
@@ -31,30 +31,31 @@
       <p>Below is a list of known factions operating within the Limbo. Select one to learn more.</p>
 
       <div class="faction-group">
-        <h3>Offical Factions</h3>
+        <h3>Major Factions</h3>
         <ul class="faction-list">
           <li><a href="factions/async.html">ASYNC</a></li>
-          <li><a href="404.html">Wayfarers Brotherhood (WB)</a></li>
+          <li><a href="404.html">Wayfarers Brotherhood (WB) [WIP]</a></li>
           <li><a href="404.html">[FILE MISSING]</a></li>
         </ul>
       </div>
 
       <div class="faction-group">
-        <h3>Semi-Official Factions</h3>
+        <h3>Half-Official Factions</h3>
         <ul class="faction-list">
           <li><a href="factions/confer.html">Confer Entente</a></li>
-          <li><a href="factions/alleycats.html">Alley cats</a></li>
+          <li><a href="404.html">[FILE MISSING]</a></li>
           <li><a href="404.html">[FILE MISSING]</a></li>
         </ul>
       </div>
 
       <div class="faction-group">
-        <h3>Non-Official Factions</h3>
+        <h3>Non-Officia Factions</h3>
         <ul class="faction-list">
           <li><a href="factions/ferg.html">FERG - Free Explorers</a></li>
-          <li><a href="404.html">Major Explorer Group (MEG)</a></li>
-          <li><a href="404.html">Sundowners</a></li>
-          <li><a href="404.html">[FILE MISSING]</a></li>
+          <li><a href="404.html">Major Explorer Group (MEG) [FILE TERMINATED]</a></li>
+          <li><a href="factions/alleycats.html">Alley cats</a></li>
+          <li><a href="404.html">Sundowners [WIP]</a></li>
+          <li><a href="404.html">Firelight Club [WIP]</a></li>
           <li><a href="404.html">[FILE MISSING]</a></li>
         </ul>
       </div>
