--- a/levels.html
+++ b/levels.html
@@ -53,11 +53,9 @@
           <li><a href="404.html">Level-2 | [DATA MISSING]</a></li>
           <li><a href="404.html">Level-3 | "Facility" [WIP]</a></li>
           <li><a href="404.html">Level-4 | "Empty Offices" [WIP]</a></li>
-          <li><a href="404.html">Level-5 | [DATA MISSING]"</a></li>
-           <li><a href="404.html">Level-6 | "Dark Factory" [WIP]</a></li>
+          <li><a href="404.html">Level-5 | [FILE RECOVERING]"</a></li>
           <li><a href="404.html">Level-11 | [DATA MISSING]</a></li>
           <li><a href="404.html">Level-22 | [DATA MISSING]</a></li>
-          <li><a href="404.html">Level-110 | [DATA MISSING]</a></li>
           <li><a href="404.html">Level-363 | "INFORMATION OMITTED" | "YOU CHEATED" [WIP]</a></li>
           <li><a href="404.html">Level-601 | "The End" [WIP]</a></li>
         </ul>
@@ -70,10 +68,11 @@
           <li><a href="levels/brutalist.html">Level-⟁ | "Brutalist"</a></li>
             <ul class="sublevel-list">
               <li><a href="404.html">Level-⟁.?? | Hell Maze [WIP]</a></li>
-              <li><a href="404.html">Level-⟁.? | Pillar Level [WIP]</a></li>
+              <li><a href="levels/pillar.html">Level-⟁.? | Concrete Forest</a></li>
             </ul>
           <li><a href="levels/abyss.html">Level-❖ | "Brick/Abyss"</a></li>
           <li><a href="levels/olympus.html">Level-???.1 | "Olympus"</a></li>
+          <li><a href="levels/sub_besement.html">Level-⌘ | "INFORMATION OMMITED" | "Sub Besement"</a></li>
         </ul>
       </div>
     </main>
