--- a/phenomena.html
+++ b/phenomena.html
@@ -28,7 +28,7 @@
 
     <main>
       <h2>Phenomena Directory</h2>
-      <p>Below is a list of known phenomena and anomalies documented the Limbo. Select one to learn more.</p>
+      <p>Below is a list of known phenomena and anomalies documented in the Limbo. Select one to learn more.</p>
 
       <div class="entity-group">
         <h3>Phenomena</h3>
@@ -51,6 +51,3 @@
 
 </body>
 </html>
-
-
-
